--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="c:\Users\Acer\Desktop\web\13bootstrap\21century.jpg" class="d-block w-100" alt="Хакерлер 1">
+                <img src="img\21century.jpg" class="d-block w-100" alt="Хакерлер 1">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Этикалық хакерлік</h5>
                     <p>Киберқауіпсіздікті нығайтатын мамандар.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="c:\Users\Acer\Desktop\web\13bootstrap\cybersecurity.jpg" class="d-block w-100" alt="Хакерлер 2">
+                <img src="img\cybersecurity.jpg" class="d-block w-100" alt="Хакерлер 2">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Жаңа қауіптер</h5>
                     <p>Заманауи технологиялар және оларды қорғау жолдары.</p>
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="card mb-3">
-                        <img src="c:\Users\Acer\Desktop\web\13bootstrap\Hacker.jpg" class="card-img-top" alt="Жаңалық 1">
+                        <img src="img\Hacker.jpg" class="card-img-top" alt="Жаңалық 1">
                         <div class="card-body">
                             <h5 class="card-title">Жаңа Кибершабуылдар</h5>
                             <p class="card-text">Киберқауіпсіздікке қауіп төндірген соңғы оқиғалар туралы мәліметтер.</p>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="card mb-3">
-                        <img src="c:\Users\Acer\Desktop\web\13bootstrap\Хакер.jpg" class="card-img-top" alt="Жаңалық 2">
+                        <img src="img\Хакер.jpg" class="card-img-top" alt="Жаңалық 2">
                         <div class="card-body">
                             <h5 class="card-title">Этикалық Хакерлер</h5>
                             <p class="card-text">Этикалық хакерлік туралы жаңа оқиғалар мен жетістіктер.</p>
