--- a/index.html
+++ b/index.html
@@ -384,11 +384,11 @@ a {
 
         // Массив с суперспособностями и изображениями мини-персонажей
         const powers = [
-            { name: "Сверхчеловеческая сила", image: "c:\\Users\\Acer\\Desktop\\web\\superstrenght.jpg" },
-            { name: "Полёт", image: "c:\\Users\\Acer\\Desktop\\web\\flight.jpg" },
-            { name: "Мастер боевых искусств", image: "c:\\Users\\Acer\\Desktop\\web\\martial.jpg" },
-            { name: "Невидимость", image: "c:\\Users\\Acer\\Desktop\\web\\invisble.jpg" },
-            { name: "Контроль над стихиями", image: "c:\\Users\\Acer\\Desktop\\web\\superman.jpg" }
+            { name: "Сверхчеловеческая сила", image: "img\superstrenght.jpg" },
+            { name: "Полёт", image: "img\flight.jpg" },
+            { name: "Мастер боевых искусств", image: "img\martial.jpg" },
+            { name: "Невидимость", image: "img\invisble.jpg" },
+            { name: "Контроль над стихиями", image: "\img\superman.jpg" }
         ];
 
         // Проверка, ввёл ли пользователь имя
@@ -420,26 +420,26 @@ a {
 
 <nav>
     <div class="icon" onclick="toggleMenu()">&#9776;</div>
-    <a href="c:\Users\Acer\Desktop\web\marvel.history.html">О Marvel</a>
-    <a href="c:\Users\Acer\Desktop\web\marvel.hero's.html">Герои</a>
-    <a href="c:\Users\Acer\Desktop\web\marvelfilm.html">Фильмы</a>
-<a href="c:\Users\Acer\Desktop\web\marvel.timeline.html">Таймлайн</a>
+    <a href="img\marvel.history.html">О Marvel</a>
+    <a href="img\marvel.hero's.html">Герои</a>
+    <a href="img\marvelfilm.html">Фильмы</a>
+<a href="img\marvel.timeline.html">Таймлайн</a>
     
 </nav>
 
 <main>
     <section class="profile-image">
-        <img src="c:\Users\Acer\Desktop\web\marvel.jpeg" alt="Marvel Logo">
+        <img src="img\marvel.jpeg" alt="Marvel Logo">
     </section>
     
 </main>
 
 <h2 id="gallery">Галерея</h2>
 <section class="gallery">
-    <img src="c:\Users\Acer\Desktop\web\444.jpeg" alt="Железный человек" onclick="showInfo('Железный человек')">
-    <img src="c:\Users\Acer\Desktop\web\555.jpeg" alt="Человек-паук" onclick="showInfo('Человек-паук')">
-    <img src="c:\Users\Acer\Desktop\web\тор.jpeg" alt="Мстители" onclick="showInfo('Мстители')">
-    <img src="c:\Users\Acer\Desktop\web\капитан.jpeg" alt="Капитан Америка" onclick="showInfo('Капитан Америка')">
+    <img src="img\444.jpeg" alt="Железный человек" onclick="showInfo('Железный человек')">
+    <img src="img\555.jpeg" alt="Человек-паук" onclick="showInfo('Человек-паук')">
+    <img src="img\тор.jpeg" alt="Мстители" onclick="showInfo('Мстители')">
+    <img src="img\капитан.jpeg" alt="Капитан Америка" onclick="showInfo('Капитан Америка')">
 </section>
 
 
