--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ footer p {
 }
 
 .gallery img {
-    width: auto;
+    width: 150px;
     height: 250px;
     margin: 5px;
     border-radius: 5px;
