--- a/index.html
+++ b/index.html
@@ -466,11 +466,11 @@ a {
 
 <section class="comics-gallery" id="comics">
     <h2>Галерея комиксов</h2>
-    <a href="https://www.marvel.com/comics/issue/118738/venom_war_fantastic_four_1_vw_2024_1"><img src="c:\Users\Acer\Desktop\web\clean.jpg" alt="Комикс 1"></a>
-    <a href="https://www.marvel.com/comics/issue/116134/captain_america_2023_14"><img src="c:\Users\Acer\Desktop\web\portrait_uncanny.jpg" alt="Комикс 2"></a>
-    <a href="https://www.marvel.com/comics/issue/114934/iron_man_2024_1"><img src="c:\Users\Acer\Desktop\web\portrait_uncanny (1).jpg" alt="Комикс 3"></a>
-    <a href="https://www.marvel.com/comics/issue/119416/incredible_hulk_2023_18"><img src="c:\Users\Acer\Desktop\web\portrait_uncanny (3).jpg" alt=""></a>
-    <a href="https://www.marvel.com/comics/issue/114560/venom_war_2024_1"><img src="c:\Users\Acer\Desktop\web\portrait_uncanny (2).jpg" alt=""></a>
+    <a href="https://www.marvel.com/comics/issue/118738/venom_war_fantastic_four_1_vw_2024_1"><img src="img\clean.jpg" alt="Комикс 1"></a>
+    <a href="https://www.marvel.com/comics/issue/116134/captain_america_2023_14"><img src="img\portrait_uncanny.jpg" alt="Комикс 2"></a>
+    <a href="https://www.marvel.com/comics/issue/114934/iron_man_2024_1"><img src="img\portrait_uncanny (1).jpg" alt="Комикс 3"></a>
+    <a href="https://www.marvel.com/comics/issue/119416/incredible_hulk_2023_18"><img src="img\portrait_uncanny (3).jpg" alt=""></a>
+    <a href="https://www.marvel.com/comics/issue/114560/venom_war_2024_1"><img src="img\portrait_uncanny (2).jpg" alt=""></a>
 </section>
 
 <section class="hero-generator">
@@ -487,7 +487,7 @@ a {
     <p>Жазылу үшін email енгізіңіз:</p>
     <form class="subscribe-form" action="subscribe.php" method="post">
         <input type="email" placeholder="Email" required>
-     <button type="submit"> <a href="c:\Users\Acer\Desktop\web\web11.html">Жазылу</a></button>
+     <button type="submit"> <a href="c:\Users\Acer\Desktop\we\web11.html">Жазылу</a></button>
        <br>
        <p>Not a member? <a href="C:\Users\Acer\Desktop\web\form9.html">Register here!</a></p>
     </form>
